--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+show_missing = true
 
 [tool.black]
 line-length = 88
