--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ dependencies = [
 
 [tool.hatch.envs.docs.scripts]
 serve = "mkdocs serve --dev-addr localhost:8000"
-deploy = "mkdocs gh-deploy --force"
+deploy = ["python docs/scripts/gen_examples.py", "mkdocs build"]
 build = "mkdocs build"
 
 [tool.hatch.version]
