--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,7 @@ jobs:
         uses: pypa/hatch@install
 
       - name: Build and deploy the documentation
-        run: hatch run docs:build
+        run: hatch run docs:deploy
 
       - name: Deploy Page 🚀
         uses: JamesIves/github-pages-deploy-action@v4.4.1
