--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ dependencies = [
   "mkdocs",
   "mkdocs-material",
   "mkdocs-gen-files",
+  "mkdocstrings-python",
   "jupyter",
   "jupytext",
   "ipywidgets"
